Thu Dec  4 19:16:28 2008  Tanaka Akira  <akr@fsij.org>

	* process.c (check_exec_fds): resolve cascaded child fd reference.

Thu Dec  4 16:58:12 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rubygems/validator.rb (Gem#remove_leading_dot_dir): make
	  this method private.  a patch from okkez in [ruby-dev:37245]

Thu Dec  4 16:19:18 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_read_nonblock):
	  OpenSSL::SSL::SSLSocket should implement read_nonblock.  a patch
	  from Aaron Patterson in [ruby-core:20277].  fix: #814 [ruby-core:20241]

Thu Dec  4 16:16:09 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/gserver.rb: fixed type in sample code.  a report from Oleg
	  Puchinin.

Thu Dec  4 14:54:32 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rubygems/local_remote_options.rb (Gem#add_update_sources_option): 
	  little documentation fix.  a patch from okkez.  [ruby-dev:37271]

Thu Dec  4 13:56:31 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/curses/curses.c (window_getch): avoid ISPRINT() macro which
	  has an issue with OpenSolaris.  [ruby-core:20189]

	* ext/curses/curses.c (curses_getch): no ISPRINT(). [ruby-core:20294]

	* signal.c (ruby_signal): EINVAL from sigaction(2) is not a bug.

Thu Dec  4 11:40:56 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (inspect_enumerator): Implement #inspect.
	  [ruby-dev:37248]-[ruby-dev:37263]

Thu Dec  4 11:38:40 2008  Akinori MUSHA  <knu@iDaemons.org>

	* vm_method.c (rb_obj_respond_to): Remove a duplicated rdoc
	  comment and fix a markup error.

Thu Dec  4 06:04:16 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/menu.rb: TkOptionMenubutton.new fails to treat 
	  'parent' and 'variable' options on a Hash argument.

Thu Dec  4 05:06:47 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: bug fix. use ::RubyVM instead of ::VM 
	  [ruby-list:45676]

	* ext/tk/tcltklib.c: update RELEASE_DATE
